--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: python
+addons:
+  postgresql: "9.6"
+before_script:
+  - psql -c 'create database database;' -U postgres
+  - python3 manage.py makemigrations
+  - python3 manage.py migrate
 python:
   - "3.6"
 # command to install dependencies
