--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 # docker run --rm --name some-postgres -p 5432:5432 -e POSTGRES_PASSWORD=postgres -d postgres
 # docker run --rm -d --hostname my-rabbit -p 5672:5672 -p 5671:5671 -p 15672:15672 -e RABBITMQ_DEFAULT_VHOST=my_vhost --name some-rabbit rabbitmq:3
-# celery worker -A dobetter --loglevel=info --concurrency=2
+# celery worker -A remoteexperements --loglevel=info --concurrency=2
 
 version: "3"
 services:
