--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ python:
   - "3.6"
 services:
   - docker
-addons:
-  postgresql: "9.6"
+#addons:
+#  postgresql: "9.6"
 env:
   - DOCKER_COMPOSE_VERSION=1.23.1
 before_script:
