set starting docker compose in detached mode

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_script:
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
-  - docker-compose up
+  - docker-compose up -d
+  - sleep 10
   - python3 manage.py makemigrations
   - python3 manage.py migrate
 # command to install dependencies
