--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 # -- FILE: pytest.ini (or tox.ini)
 [pytest]
-DJANGO_SETTINGS_MODULE = dobetter.settings
+DJANGO_SETTINGS_MODULE = remoteexperements.settings
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
 markers = critical_test: mark test as critical. These tests must to be checked first.
