--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
   - docker-compose up -d
   - sleep 10
   - python3 manage.py makemigrations
+  - python3 manage.py makemigrations taskshower
   - python3 manage.py migrate
 # command to install dependencies
 install:
