--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest
+  - coverage run -m pytest
 after_script:
   - docker-compose down
+after_success:
+  - codecov -t 029a6193-db20-4e43-b6b5-ee39982a7528
