--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
 # command to run tests
 script:
   - coverage run -m pytest
+  - coverage report -m
 after_script:
   - docker-compose down
 after_success:
